# gofpp

./: .gitignore  .gitmodules  BACKENDS_8md.html  CMakeLists.txt  Doxyfile  EXAMPLES_8md.html  FAQ_8md.html  FONTS_8md.html  HEADER__DOCS__GUIDE_8md.html  LICENSE_8md.html  PHILOSOPHY_8md.html  README.md  README_8md.html  abstract__factory_8hpp.html  abstract__factory_8hpp__dep__incl.map  abstract__factory_8hpp__dep__incl.md5  abstract__factory_8hpp__incl.map  abstract__factory_8hpp__incl.md5  abstract__factory_8hpp_source.html  adapter_8hpp.html  adapter_8hpp__dep__incl.map  adapter_8hpp__dep__incl.md5  adapter_8hpp_source.html  annotated.html  app__facade_8hpp.html  app__facade_8hpp__incl.map  app__facade_8hpp__incl.md5  app__facade_8hpp_source.html  bridge_8hpp.html  bridge_8hpp__dep__incl.map  bridge_8hpp__dep__incl.md5  bridge_8hpp__incl.map  bridge_8hpp__incl.md5  bridge_8hpp_source.html  builder_8hpp.html  builder_8hpp__dep__incl.map  builder_8hpp__dep__incl.md5  builder_8hpp_source.html  calc__command_8hpp.html  calc__command_8hpp__dep__incl.map  (+391 more)
.github/workflows/: tests.yml
docs/: CONTRIBUTING.md  HEADER_DOCS_GUIDE.md  PHILOSOPHY.md
examples/imgui_calculator_demo/: CMakeLists.txt  app_facade.hpp  calc_command.hpp  calc_memento.hpp  history.hpp  main.cpp  states.hpp
examples/imgui_sdl2_demo/: CMakeLists.txt  main.cpp
include/: gofpp.hpp
include/gofpp/: threading.hpp
include/gofpp/behavioral/: chain_of_responsibility.hpp  command.hpp  interpreter.hpp  iterator.hpp  memento.hpp  observer.hpp  state.hpp  strategy.hpp  template_method.hpp  visitor.hpp
include/gofpp/creational/: abstract_factory.hpp  builder.hpp  factory.hpp  prototype.hpp  singleton.hpp
include/gofpp/structural/: adapter.hpp  bridge.hpp  composite.hpp  decorator.hpp  facade.hpp  flyweight.hpp  mediator.hpp  proxy.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  (+58 more)
tests/: CMakeLists.txt
tests/behavioral/: test_chain_of_responsibility.cpp  test_command.cpp  test_interpreter.cpp  test_iterator.cpp  test_memento.cpp  test_observer.cpp  test_state.cpp  test_strategy.cpp  test_template_method.cpp  test_visitor.cpp
tests/creational/: test_abstract_factory.cpp  test_builder.cpp  test_factory.cpp  test_prototype.cpp  test_singleton.cpp
tests/structural/: test_adapter.cpp  test_bridge.cpp  test_composite.cpp  test_decorator.cpp  test_facade.cpp  test_flyweight.cpp  test_mediator.cpp  test_proxy.cpp
